# booruchan

./: .gitignore  Cargo.toml
src/: args.rs  config.rs  downloader.rs  json_utils.rs  lib.rs  main.rs  rclone.rs  string.rs  utils.rs  worker.rs
