[package]
name = "booruchan"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlite = "0.36.1"
reqwest = { version = "0.12.8", features = ["stream", "json"] }
serde_json = { version = "1.0.128", features = ["preserve_order"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.7"
futures = "0.3"
image = { version = "0.25", features = ["jpeg"] }
serde = "1.0.210"
tokio = { version = "1.40.0", default-features = false, features = [
    "time",
    "io-util",
    "fs",
    "process",
    "macros",
    "rt",
    "rt-multi-thread",
] }

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
