[package]
name = "booruchan"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlite = "0.36.1"
reqwest = { version = "0.12.9", features = ["stream", "json"] }
serde_json = { version = "1.0.133", features = ["preserve_order"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.9"
futures = "0.3"
image = { version = "0.25", features = ["jpeg"] }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42.0", default-features = false, features = [
    "time",
    "io-util",
    "io-std",
    "fs",
    "process",
    "macros",
    "rt",
    "rt-multi-thread",
] }
#rusqlite = "0.32.1"
#serde_rusqlite = "0.36.0"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
